--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 </div>
 </nav>
 <section class="jumbotron text-center" style="background-image: linear-gradient(to bottom, #7C83FD, #fff);">
-<img src="img/Foto Andalan.jpg" alt="ChellAzzahra" width="200" class="rounded-circle img-thumbnail shadow">
+<img src="img/poto andalan.jpg" alt="ChellAzzahra" width="200" class="rounded-circle img-thumbnail shadow">
 <h1 class="display-4">ChellSkibidi</h1>
-<p class="lead">Gamers | Programmer</p>
+<p class="lead">Wibu | Programmer</p>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L48,85.3C96,75,192,53,288,53.3C384,53,480,75,576,106.7C672,139,768,181,864,181.3C960,181,1056,139,1152,117.3C1248,96,1344,96,1392,96L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 </section>
 <!-- About Section -->
@@ -51,7 +51,7 @@
 <div class="col-md-4">
 <p class="text-justify">saya adalah cewek introvert yang suka menyendiri saya tidak terlalu pandai bergaul dan lebih suka menghabiskan waktu sendirian di rumah, saya punya sedikit bakat dalam coding saya bisa membuat script bot dan website yang cukup bagus (menurut saya).</p>
 
-<p class="text-justify">Selain coding, Sebagai cowok introvert, saya tidak terlalu suka bertemu orang baru, dan lebih suka menghabiskan waktu sendirian. Tapi, saya tidak kesepian, karena saya punya beberapa teman online yang juga suka bermain game, dan mereka sering bermain bersama. saya punya impian untuk menjadi programmer profesional, dan saya yakin bahwa saya bisa mencapai impian itu.</p>
+<p class="text-justify">Selain coding, Sebagai cewek introvert, saya tidak terlalu suka bertemu orang baru, dan lebih suka menghabiskan waktu sendirian. Tapi, saya tidak kesepian, karena saya punya beberapa teman online yang juga suka bermain game, dan mereka sering bermain bersama. saya punya impian untuk menjadi programmer profesional, dan saya yakin bahwa saya bisa mencapai impian itu.</p>
 </div>
 <div class="row text-center mb-3">
 <div class="col">
