--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="col-md-4">
 <p class="text-justify">saya adalah cewek introvert yang suka menyendiri saya tidak terlalu pandai bergaul dan lebih suka menghabiskan waktu sendirian di rumah, saya punya sedikit bakat dalam coding saya bisa membuat script bot dan website yang cukup bagus (menurut saya).</p>
 
-<p class="text-justify">Selain coding, Sebagai cewek introvert, saya tidak terlalu suka bertemu orang baru, dan lebih suka menghabiskan waktu sendirian. Tapi, saya tidak kesepian, karena saya punya beberapa teman online yang juga suka bermain game, dan mereka sering bermain bersama. saya punya impian untuk menjadi programmer profesional, dan saya yakin bahwa saya bisa mencapai impian itu.</p>
+<p class="text-justify">Selain coding, Sebagai cewek introvert, saya tidak terlalu suka bertemu orang baru, dan lebih suka menghabiskan waktu sendirian. Tapi, saya tidak kesepian, karena saya sangat suka menonton anime dan game, dan saya juga sering bermain bersama. saya punya impian untuk menjadi Pengusaha sukses atau bekerja diperusahaaan, dan saya yakin bahwa saya bisa mencapai impian itu.</p>
 </div>
 <div class="row text-center mb-3">
 <div class="col">
@@ -66,10 +66,6 @@
 </div>
  </div>
 </div>
-<center>
-<button onclick="window.open('https://chat.whatsapp.com/DLPvZVjQIi42UzauaaUhNk', '_blank')">Gc WhatsApp</button>
-<button onclick="window.open('https://whatsapp.com/channel/0029VaFGs8U6RGJDSDeYmC2S', '_blank')">Ch WhatsApp</button>
-<button onclick="window.open('https://wa.me/6285692545216', '_blank')">Bot WhatsApp</button>
 </center>
 </div>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#7dedff" fill-opacity="1" d="M0,96L48,112C96,128,192,160,288,186.7C384,213,480,235,576,218.7C672,203,768,149,864,149.3C960,149,1056,203,1152,202.7C1248,203,1344,149,1392,122.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
