--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
 </div>
 <div class="row justify-content-center">
 <div class="col-md-4">
-<p class="text-justify">saya adalah cewek introvert yang suka menyendiri saya tidak terlalu pandai bergaul dan lebih suka menghabiskan waktu sendirian di rumah, saya punya sedikit bakat dalam coding saya bisa membuat script bot dan website yang cukup bagus (menurut saya).</p>
+<p class="text-justify">saya adalah cewek introvert yang suka menyendiri saya tidak terlalu pandai bergaul dan lebih suka menghabiskan waktu sendirian di rumah, saya punya sedikit bakat dalam coding saya bisa membuat script dan website yang cukup bagus (menurut saya).</p>
 
 <p class="text-justify">Selain coding, Sebagai cewek introvert, saya tidak terlalu suka bertemu orang baru, dan lebih suka menghabiskan waktu sendirian. Tapi, saya tidak kesepian, karena saya sangat suka menonton anime dan game, dan saya juga sering bermain bersama. saya punya impian untuk menjadi Pengusaha sukses atau bekerja diperusahaaan, dan saya yakin bahwa saya bisa mencapai impian itu.</p>
+
+<p class="text-justify">saya merasa kesepian hampa dan terkena tekanan mental, dikarenakan saya tidak mempunyai orang yang mendukung saya, semua manusia itu memanglah egois. saya berpikir bahwa mempunyai teman itu sama saja memiliki pacar karena kalau sudah bosan dengan yang lama ia akan mencari yang baru.</p>
 </div>
 <div class="row text-center mb-3">
 <div class="col">
