--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
 <div class="row justify-content-center">
 <div class="col-md-4 mb-3">
 <div class="card">
-<img src="img/talents/1.jpg" class="card-img-top" alt="Talents 1">
+<img src="img/talents/bundir.jpg" class="card-img-top" alt="Talents 1">
 <div class="card-body">
-<p><a href="https://wa.me/6285692545216" class="text-dark fw-bold">Bot multi fungsi</a>.</p>
 <p class="card-text">masih tahap pengembangan</p>
 </div>
 </div>
