--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <div class="row justify-content-center">
 <div class="col-md-4 mb-3">
 <div class="card">
-<img src="img/talents/bundir.jpg" class="card-img-top" alt="Talents 1">
+<img src="img/talents/2.jpg" class="card-img-top" alt="Talents 1">
 <div class="card-body">
 <p class="card-text">masih tahap pengembangan</p>
 </div>
