--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="col-md-4">
 <center>
 <a href="https://wa.me/6285212573399" target="_blank"><img src="https://telegra.ph/file/19322ece796ed4e3fa5f5.jpg" width="30" height="30" alt="WhatsApp"></a>
-<a href="https://instagram.com/chellheol_" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" width="30" height="30" alt="Instagram"></a>
+<a href="https://instagram.com/chellheol" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" width="30" height="30" alt="Instagram"></a>
 <a href="https://youtube.com/-" target="_blank"><img src="https://telegra.ph/file/2ae4d0aa979ee6029c603.jpg" width="30" height="30" alt="Channel Youtube"></a>
 </center>
 </div>
