--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>My Portofolio | ChellAzzahra</title>
+<title>My Portofolio | JihadMaulana</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -11,7 +11,7 @@
 <body id="home">
 <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background-color: #7C83FD; padding: 1rem 2rem;">
 <div class="container">
-<a class="navbar-brand" href="#">ChellAzzahra</a>
+<a class="navbar-brand" href="#">JihadMaulana</a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
@@ -34,8 +34,8 @@
 </div>
 </nav>
 <section class="jumbotron text-center" style="background-image: linear-gradient(to bottom, #7C83FD, #fff);">
-<img src="img/poto andalan.jpg" alt="ChellAzzahra" width="200" class="rounded-circle img-thumbnail shadow">
-<h1 class="display-4">ChellSkibidi</h1>
+<img src="img/poto andalan.jpg" alt="JihadMaulana" width="200" class="rounded-circle img-thumbnail shadow">
+<h1 class="display-4">JihadSiNPC</h1>
 <p class="lead">Wibu | Programmer</p>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L48,85.3C96,75,192,53,288,53.3C384,53,480,75,576,106.7C672,139,768,181,864,181.3C960,181,1056,139,1152,117.3C1248,96,1344,96,1392,96L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 </section>
@@ -49,9 +49,9 @@
 </div>
 <div class="row justify-content-center">
 <div class="col-md-4">
-<p class="text-justify">saya adalah cewek introvert yang suka menyendiri saya tidak terlalu pandai bergaul dan lebih suka menghabiskan waktu sendirian di rumah, saya punya sedikit bakat dalam coding saya bisa membuat script dan website yang cukup bagus (menurut saya).</p>
+<p class="text-justify">saya adalah cowok introvert yang suka menyendiri saya tidak terlalu pandai bergaul dan lebih suka menghabiskan waktu sendirian di rumah, saya punya sedikit bakat dalam coding saya bisa membuat script dan website yang cukup bagus (menurut saya).</p>
 
-<p class="text-justify">Selain coding, Sebagai cewek introvert, saya tidak terlalu suka bertemu orang baru, dan lebih suka menghabiskan waktu sendirian. Tapi, saya tidak kesepian, karena saya sangat suka menonton anime dan game, dan saya juga sering bermain bersama. saya punya impian untuk menjadi Pengusaha sukses atau bekerja diperusahaaan, dan saya yakin bahwa saya bisa mencapai impian itu.</p>
+<p class="text-justify">Selain coding, Sebagai cowok introvert, saya tidak terlalu suka bertemu orang baru, dan lebih suka menghabiskan waktu sendirian. Tapi, saya tidak kesepian, karena saya sangat suka menonton anime dan game, dan saya juga sering bermain bersama. saya punya impian untuk menjadi Pengusaha sukses atau bekerja diperusahaaan, dan saya yakin bahwa saya bisa mencapai impian itu.</p>
 
 <p class="text-justify">saya merasa kesepian hampa dan terkena tekanan mental, dikarenakan saya tidak mempunyai orang yang mendukung saya, semua manusia itu memanglah egois. saya berpikir bahwa mempunyai teman itu sama saja memiliki pacar karena kalau sudah bosan dengan yang lama ia akan mencari yang baru.</p>
 </div>
@@ -133,7 +133,7 @@ Loading...
 <!-- Akhir Contact -->
 <!-- Awal Footer -->
 <footer class="text-white text-center pb-5" style="background-color: #7C83FD;">
-<p>Created with <i class="bi bi-heart-fill text-danger"></i>by  <a href="https://wa.me/6285212573399" class="text-white fw-bold">Chelsea Azzahra</a></p>
+<p>Created with <i class="bi bi-heart-fill text-danger"></i>by  <a href="https://wa.me/6285212573399" class="text-white fw-bold">Jihad Maulana Yusup</a></p>
 </footer>
 <!-- Akhir Footer -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
