--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="home">
 <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background-color: #7C83FD; padding: 1rem 2rem;">
 <div class="container">
-<a class="navbar-brand" href="#">JihadNPC</a>
+<a class="navbar-brand" href="#">JihadMaulana</a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
@@ -133,7 +133,7 @@ Loading...
 <!-- Akhir Contact -->
 <!-- Awal Footer -->
 <footer class="text-white text-center pb-5" style="background-color: #7C83FD;">
-<p>Created with <i class="bi bi-heart-fill text-danger"></i>by  <a href="https://wa.me/6289606790112" class="text-white fw-bold">Reza Official</a></p>
+<p>Created with <i class="bi bi-heart-fill text-danger"></i>by  <a href="https://wa.me/6289606790112" class="text-white fw-bold"> JihadMaulana</a></p>
 </footer>
 <!-- Akhir Footer -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
